# audio-monitor

./: .gitignore  ANALISIS.md  ANALISIS_ARQUITECTURA_PERSISTENCIA.md  ANALISIS_COMPLETO_DEVICE_UUID.md  ANALISIS_FICHATECH_MONITOR.md  ANALISIS_IDENTIFICACION_CLIENTES.md  ANDROID_DECOMPRESSION_GUIDE.md  ANDROID_INTEGRATION_COMPLETE.md  ANDROID_QUICK_CHANGES.md  ANDROID_REVISION_FINAL.md  ANDROID_REVISION_SUMMARY.md  ANDROID_TIER1_PATCH.md  ANDROID_ZERO_LATENCY_OPTIONS.md  ARCHITECTURE_CHANNELS_STATE.md  ARQUITECTURA.md  ARQUITECTURA_48_CANALES.md  AUDIO_ARCHITECTURE_ANALYSIS.md  AUDIO_COMPRESSION_FIXES.md  BUFFER_SATURATION_FIX_EXPLAINED.md  CAMBIOS_48_CANALES.md  CAMBIOS_RESPONSIVE_DESIGN.md  CHANGES_VERIFICATION.md  CHANNELS_STATE_PERSISTENCE.md  COMANDOS_UTILES.md  CONNECTION_FIX_IMPLEMENTED.md  CONNECTION_ISSUES_ANALYSIS.md  CRASH_FIX_SUMMARY.md  CRITICAL_FIX_SIGSEGV_RACE_CONDITION.md  CURRENT_STATUS_SUMMARY.md  DIAGNOSTICO_CONEXION_ANDROID.md  DIAGNOSTICO_CORRECCIONES.md  DIAGRAMA_FLUJO_COMPLETO.md  DIAGRAMA_VISUAL.txt  DOCUMENTATION_INDEX.md  DOCUMENTOS_GENERADOS_GUIA.md  EJEMPLOS_FASES_2_3.md  ENTREGA_FASE_1.md  FASE3_OPTIMIZACIONES_APLICADAS.md  FINAL_STATUS_COMPLETE.md  FIX_CRÍTICO_CRASH_HEARTBEAT.md  (+120 more)
assets/: convert_to_ico.py  generate_highres_icon.py  generate_pwa_icons.py
audio_server/: __init__.py  audio_broadcaster.py  audio_capture.py  audio_compression.py  audio_gain_calibration.py  audio_mixer.py  channel_manager.py  device_registry.py  latency_optimizer.py  native_protocol.py  native_server.py  scene_manager.py  unified_persistence.py  web_identity.py  websocket_server.py
audio_server/config/: channel_names.json  client_configs.json
backend/: audio_capture.py  channel_manager.py  webrtc_bridge.py  webrtc_server.py  webrtc_track.py  websocket_server.py
config/: channel_names.json  channels_state.json  client_configs.json  client_states.json  devices.json  devices.json.test  devices.json.test2  web_ui_state.json
config/scenes/: demo_scene.json
dist_obf/: main.py
dist_obf/audio_server/: audio_capture.py  audio_compression.py  audio_mixer.py  channel_manager.py  device_registry.py  latency_optimizer.py  native_protocol.py
dist_obf/pyarmor_runtime_000000/: __init__.py
docs/: ANALISIS_LATENCIA_OPTIMIZACIONES.md  CAMBIOS_SINCRONIZACION_INMEDIATA.md  DIAGRAMA_MEJORA_LATENCIA.md  GUIA_OPTIMIZACION_LATENCIA_ANDROID.md  GUIA_RAPIDA_PWA.md  IMPLEMENTACION_LATENCIA_ULTRA_BAJA.md  OPTIMIZACIONES_LATENCIA_WEB.md  README_DOCUMENTACION.md  SINCRONIZACION_ANDROID_SERVER_WEB.md  SINCRONIZACION_BIDIRECCIONAL_Y_PWA.md  guia_cliente_maestro_web.md
frontend/: app.js  audio-processor.js  heartbeat-worker.js  index.html  manifest.json  styles.css  sw.js  test-webrtc-subscribe.html  webrtc-client.js
kotlin/: ChannelView.kt  NativeAudioClient.kt  NativeAudioStreamActivity.kt  OboeAudioRenderer.kt  native_audio_engine.cpp
kotlin android/: AndroidManifest.xml  AudioDecompressor.kt  AudioDecompressorJNI.cpp  AudioDescompressor.kt  AudioDeviceChangeListener.kt  AudioStreamForegroundService.kt  AudioTimestampSync.kt  CMakeLists.txt  ChannelView.kt  NativeAudioClient.kt  NativeAudioStreamActivity.kt  OboeAudioRenderer.kt  README_Opus_Android.md  UDPAudioClient.kt  activity_native_receiver.xml  audio_callback.h  build.gradle.kts  native_audio_engine.cpp  verify_opus_android.sh
kotlin android archivos/main/: AndroidManifest.xml
kotlin android archivos/main/assets/: privacy_policy.html  terms_and_conditions.html
kotlin android archivos/main/cpp/: CMakeLists.txt  audio_callback.h  audio_callback.mm  native_audio_engine.cpp  opus_codec_jni.cpp
kotlin android archivos/main/res/anim/: pulse_btn_crear_lista.xml  splash_scale.xml
kotlin android archivos/main/res/drawable/: ayudaico.xml  bg_btn_delete.xml  bg_btn_modern.xml  bg_button_circle.xml  bg_decibel_value.xml  bg_dialog.xml  bg_edittext_modern.xml  bg_expanded_content.xml  bg_fader_level.xml  bg_footer.xml  bg_google_button.xml  bg_gradient.xml  bg_header.xml  bg_input.xml  bg_nav_footer_overlay.xml  bg_neon_border.xml  bg_neon_note.xml  bg_note_wave.xml  bg_numero_canal_circle.xml  bg_numero_canal_modern.xml  bg_panel.xml  bg_rack_gradient.xml  bg_rounded_value.xml  bg_rounded_value_large.xml  bg_spinner_dropdown.xml  bg_spinner_modern.xml  bg_tooltip_cloud.xml  border.xml  btn_background_dark_primary.xml  btn_background_dark_secondary.xml  btn_login_google_modern.xml  btn_primary_modern.xml  btn_ripple_dark_primary.xml  btn_ripple_dark_secondary.xml  btn_start_style.xml  (+76 more)
kotlin android/clases/: AudioStreamForegroundService.kt  ChannelView.kt  MainActivity.kt  NativeAudioClient.kt  NativeAudioClient_old.kt  NativeAudioStreamActivity.kt  OboeAudioRenderer.kt  UDPAudioClient.kt
kotlin android/cpp/: CMakeLists.txt  audio_callback.h  native_audio_engine.cpp
kotlin android/fichatech/: AjustesFragment.kt  CentsView.kt  FFTProcessor.kt  InicioFragment.kt  InterstitialAdManager.kt  MainActivity.kt  SplashActivity.kt  WaveformView.kt  WebViewActivity.kt
kotlin android/fichatech/audiostream/: NativeAudioClient.kt  NativeAudioStreamActivity.kt  OboeAudioRenderer.kt
kotlin android/fichatech/auth/: LoginActivity.kt  PrivacyPolicyActivity.kt  VerificationPendingActivity.kt
kotlin android/fichatech/documentos/: Documento.kt  DocumentosFragment.kt
kotlin android/fichatech/fichatecnica/: Canal.kt  CrearFichaActivity.kt  FXAdapter.kt  FichaAdapter.kt  FichaSaver.kt  FichaTecnicaFragment.kt  MicrofoniaAdapter.kt  ViewFichaActivity.kt
kotlin android/fichatech/planta/: PlantaEscenarioFragment.kt  PlantaRenderer.kt
kotlin android/fichatech/recording/: Recording.kt  RecordingDatabase.kt  RecordingManager.kt  RecordingStorage.kt
kotlin android/fichatech/sonometro/: EqualizerFFTView.kt  SonometroFragment.kt  WaveView.kt
kotlin android/fichatech/tuner/: PitchDetection.kt  Tuner.kt  TunerFragment.kt
kotlin android/land/: activity_native_receiver.xml  view_channelficha.xml
kotlin android/xml/: AndroidManifest.xml  activity_native_receiver.xml  view_channelficha.xml
release/: README.txt
scenes/: kumbia_para_ti.json
(+104 files in other folders)
